Add intercative approach to docs with a Notebook

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -7,7 +7,7 @@
     "# Using `pymf6` Interactively\n",
     "\n",
     "You can run a MODFLOW6 model interactively.\n",
-    "For example, in Jupyter Notebook.\n",
+    "For example, in a Jupyter Notebook.\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -34,10 +34,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The directory `ex02-tidal` contains all files needed to run a MODFLOW 6 model.\n",
-    "The model is `ex02-tidal` is one of the example models that come with MODFLOW6.\n",
+    "The directory `ex02-tidal` contains all files needed to run a MODFLOW6 model.\n",
+    "The model `ex02-tidal` is one of the example models that come with MODFLOW6.\n",
     "\n",
-    "Now import the class `MF6` from the module `pymf6.threaded`:"
+    "Now, import the class `MF6` from the module `pymf6.threaded`:"
    ]
   },
   {
@@ -76,9 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A MODFLOW6 model can contain multiple simultions.\n",
+    "A MODFLOW6 model can contain multiple simulations.\n",
     "To date all examples that come with MODFLOW6 only have one simulation.\n",
-    "Simulations are in a list.\n",
+    "The simulations are assembled in a list.\n",
     "Get the first element of that list:"
    ]
   },
@@ -105,7 +105,8 @@
    "metadata": {},
    "source": [
     "As you can see this solution has one package and 68 packages.\n",
-    "You can list all package name. One on our case:"
+    "You can list all package name.\n",
+    "One in our case:"
    ]
   },
   {
@@ -122,7 +123,7 @@
    "metadata": {},
    "source": [
     "All internal MODFLOW6 names are all upper case such as `IMSLINEAR`.\n",
-    "New names introduced by `pymf6` are all lower case, with undescores for longer names such as `package_names`.\n",
+    "New names introduced by `pymf6` are all lower case, with underscores for longer names such as `package_names`.\n",
     "\n",
     "Now you can access this package via Python's attribute access:"
    ]
@@ -140,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is equivalent to the dictiobary-like key access (called getitem):"
+    "This is equivalent to the dictionary-like key access (called `__getitem__`):"
    ]
   },
   {
@@ -156,10 +157,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This first approach has the advantage that you can take advantage of the tab complition, i.e. after the dot press the `<TAB>` key in the Notebook (this might be a different in a different tool), you will get a list of all possible names.\n",
-    "After you start typing, the list narrows to the names that start with the letters you typed.\n",
+    "This first approach has the advantage that you can take advantage of tab completion, i.e. after the dot press the `<TAB>` key in the Notebook (this might be a different key in an other tool), you will get a list of all possible names.\n",
+    "After you start typing, the list narrows down to the names that start with the letters you typed.\n",
     "\n",
-    "The second approach can be useful, if you now the name of the package of varibale.\n",
+    "The second approach can be useful, if you now the name of the package or variable.\n",
     "For example, `var_names` contains all variable names in a list:"
    ]
   },
@@ -176,8 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That is many names.\n",
-    "Lets's display the first five names:"
+    "Let's display the first five names:"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now show the names **and** the  values of this first five names: "
+    "Now show the names **and** the values of this first five names: "
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A variable itselfs displays a bit more verbose in the Notebook:"
+    "A variable itself displays a bit more verbose in the Notebook:"
    ]
   },
   {
@@ -314,9 +314,9 @@
     "Typically, a solution is not so interesting.\n",
     "More frequently, you might want to get more information about a model or even change model variable values at run time.\n",
     "Again, there can be several models.\n",
-    "So far, MODFLOW6 suppports only one model.\n",
+    "So far, MODFLOW6 supports only one model.\n",
     "This might change in the future.\n",
-    "Therefore, `pymf6` already works with a list of models (of length one so far ;).\n",
+    "Therefore, `pymf6` already works with a list of models (with of length one so far ;).\n",
     "Take the first model from the models list of the first simulation:"
    ]
   },
@@ -343,7 +343,7 @@
    "metadata": {},
    "source": [
     "It has 17 packages and 43 variables.\n",
-    "Again all names are contained in lists:"
+    "Again, all names are contained in lists:"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access something more interesting.\n",
+    "Let's access something more interesting.\n",
     "For example the Structured Discretization (DIS) package:"
    ]
   },
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and the only the number:"
+    "Get only the number:"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also availbale as NumPy array:"
+    "Also available as a NumPy array:"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bottom variable has more elements (layer * row * column):"
+    "The bottom variable has more elements (number of elements = layer * row * column):"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The NumPy array:"
+    "The `value` holds a NumPy array:"
    ]
   },
   {
@@ -482,9 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bottom comes a one-dimensional array.\n",
+    "The bottom comes as a one-dimensional array.\n",
     "But it represents a three-dimensional structure.\n",
-    "For all variables for this is the case , `value_3d` gives a 3D view:"
+    "For all variables for this is applicable, `value_3d` gives a 3D-view:"
    ]
   },
   {
@@ -500,7 +500,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also access elements for 3D-variables via the one-based `layer`, `row`, `column` index:"
+    "You can also access elements for 3D-variables via the one-based `layer`, `row`, `column` index.\n",
+    "This gives the element in layer 1, row 1, and column 1:"
    ]
   },
   {
@@ -623,7 +624,7 @@
    "source": [
     "## Doing a Time Step\n",
     "\n",
-    "This make MODFLOW6 to claculate the next time step:"
+    "This make MODFLOW6 to calculate the next time step:"
    ]
   },
   {
@@ -648,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mf6.run_to_end()"
+    "# mf6.run_to_end()"
    ]
   },
   {
@@ -657,6 +658,13 @@
    "source": [
     "This will kill the current kernel because Fortran calls `STOP`, which terminates the current process."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
