Add interactive example in Jupyter Notebook

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -69,6 +69,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Meta Data\n",
+    "\n",
+    "This instance offers meta data such as the names of the models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf6.simulation.model_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or the time unit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf6.simulation.time_unit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as well as the associated time multiplier to convert to seconds:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf6.simulation.time_multiplier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Temporal Discretization (TDIS)\n",
+    "\n",
+    "Data about stress periods and time steps are also available.\n",
+    "Get the number of stress periods:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf6.simulation.TDIS.NPER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or the total simulation time (in days in this case):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf6.simulation.TDIS.TOTALSIMTIME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mf6.simulation.TDIS.var_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simulations"
    ]
   },
@@ -368,6 +462,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Packages\n",
+    "\n",
     "Let's access something more interesting.\n",
     "For example the Structured Discretization (DIS) package:"
    ]
@@ -387,6 +483,13 @@
    "source": [
     "Get the number of layers.\n",
     "The full variable:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables"
    ]
   },
   {
@@ -658,13 +761,6 @@
    "source": [
     "This will kill the current kernel because Fortran calls `STOP`, which terminates the current process."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
