Add setting of LD_LIBRARY_PATH for readthedocs

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -26,8 +26,28 @@
    },
    "outputs": [],
    "source": [
-    "%cd -q ../examples/ex02-tidal/\n",
-    "#%cd c:\\Users\\mike\\Dev\\pymf6\\doc\\examples\\ex02-tidal\\"
+    "%%capture\n",
+    "\n",
+    "#  ## Hidden `nbsphinx' cell\n",
+    "\n",
+    "# Set LD_LIBRARY_PATH for readthedocs\n",
+    "# Makes it find libgfortran on Linux\n",
+    "\n",
+    "import os\n",
+    "from os.path import split, join\n",
+    "\n",
+    "cur_path = %pwd\n",
+    "pymf6_path = join(split(split(cur_path)[0])[0], 'pymf6')\n",
+    "old_lib_path = os.getenv('LD_LIBRARY_PATH', '')\n",
+    "if old_lib_path:\n",
+    "    new_lib_path = ':'.join([old_lib_path, pymf6_path])\n",
+    "else:\n",
+    "    new_lib_path = pymf6_path\n",
+    "%set_env LD_LIBRARY_PATH=$new_lib_path\n",
+    "\n",
+    "# Change to model directory\n",
+    "\n",
+    "%cd -q ../examples/ex02-tidal/"
    ]
   },
   {
