Show LD_LIBRARY_PATH

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "%%capture\n",
     "\n",
     "#  ## Hidden `nbsphinx' cell\n",
     "\n",
@@ -58,6 +58,15 @@
     "The model `ex02-tidal` is one of the example models that come with MODFLOW6.\n",
     "\n",
     "Now, import the class `MF6` from the module `pymf6.threaded`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env LD_LIBRARY_PATH"
    ]
   },
   {
