Show LD_LIBRARY_PATH content

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -43,11 +43,7 @@
     "    new_lib_path = ':'.join([old_lib_path, pymf6_path])\n",
     "else:\n",
     "    new_lib_path = pymf6_path\n",
-    "%set_env LD_LIBRARY_PATH=$new_lib_path\n",
-    "\n",
-    "# Change to model directory\n",
-    "\n",
-    "%cd -q ../examples/ex02-tidal/"
+    "%set_env LD_LIBRARY_PATH=$new_lib_path"
    ]
   },
   {
@@ -66,7 +62,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env LD_LIBRARY_PATH"
+    "p = %env LD_LIBRARY_PATH\n",
+    "%ls $p\n",
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change to model directory\n",
+    "\n",
+    "%cd -q ../examples/ex02-tidal/"
    ]
   },
   {
