Show full directory tree

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -63,8 +63,8 @@
    "outputs": [],
    "source": [
     "p = %env LD_LIBRARY_PATH\n",
-    "%ls $p\n",
-    "%pwd"
+    "%ls -al $p\n",
+    "!tree ../../.."
    ]
   },
   {
