Add installation of tree

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -64,6 +64,7 @@
    "source": [
     "p = %env LD_LIBRARY_PATH\n",
     "%ls -al $p\n",
+    "!apt-get update && apt-get install tree\n",
     "!tree ../../.."
    ]
   },
