--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -63,15 +63,35 @@
    "outputs": [],
    "source": [
     "p = %env LD_LIBRARY_PATH\n",
-    "%ls -al $p\n",
-    "!apt-get update && apt-get install tree\n",
-    "!tree ../../.."
+    "%ls -al $p"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def list_files(startpath):\n",
+    "    for root, dirs, files in os.walk(startpath):\n",
+    "        level = root.replace(startpath, '').count(os.sep)\n",
+    "        indent = ' ' * 4 * (level)\n",
+    "        print('{}{}/'.format(indent, os.path.basename(root)))\n",
+    "        subindent = ' ' * 4 * (level + 1)\n",
+    "        for f in files:\n",
+    "            print('{}{}'.format(subindent, f))\n",
+    "            \n",
+    "list_files('../../..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# Change to model directory\n",
