Fix install path of pymf6 for doc building

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -36,8 +36,9 @@
     "import os\n",
     "from os.path import split, join\n",
     "\n",
-    "cur_path = %pwd\n",
-    "pymf6_path = join(split(split(cur_path)[0])[0], 'pymf6')\n",
+    "user_path = os.path.expanduser('~')\n",
+    "rtd_path = 'checkouts/readthedocs.org/user_builds/pymf6/envs/latest/lib/python3.7/site-packages/pymf6'\n",
+    "pymf6_path = os.path.join(user_path, rtd_path)\n",
     "old_lib_path = os.getenv('LD_LIBRARY_PATH', '')\n",
     "if old_lib_path:\n",
     "    new_lib_path = ':'.join([old_lib_path, pymf6_path])\n",
@@ -83,7 +84,7 @@
     "        for f in files:\n",
     "            print('{}{}'.format(subindent, f))\n",
     "            \n",
-    "list_files('../../..')"
+    "list_files('~/checkouts/readthedocs.org/user_builds/pymf6/envs/latest/lib/python3.7/site-packages/pymf6/')"
    ]
   },
   {
