Print absolute path

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -64,7 +64,8 @@
    "outputs": [],
    "source": [
     "p = %env LD_LIBRARY_PATH\n",
-    "%ls -al $p"
+    "%ls -al $p\n",
+    "print(p)"
    ]
   },
   {
@@ -84,7 +85,7 @@
     "        for f in files:\n",
     "            print('{}{}'.format(subindent, f))\n",
     "            \n",
-    "list_files('~/checkouts/readthedocs.org/user_builds/pymf6/envs/latest/lib/python3.7/site-packages/pymf6/')"
+    "list_files(p)"
    ]
   },
   {
