Remove helper output

--- a/doc/notebooks/Interactive.ipynb
+++ b/doc/notebooks/Interactive.ipynb
@@ -28,23 +28,11 @@
    "source": [
     "%%capture\n",
     "\n",
-    "#  ## Hidden `nbsphinx' cell\n",
+    "#  Hidden `nbsphinx' cell\n",
     "\n",
-    "# Set LD_LIBRARY_PATH for readthedocs\n",
-    "# Makes it find libgfortran on Linux\n",
+    "# Change to model directory\n",
     "\n",
-    "import os\n",
-    "from os.path import split, join\n",
-    "\n",
-    "user_path = os.path.expanduser('~')\n",
-    "rtd_path = 'checkouts/readthedocs.org/user_builds/pymf6/envs/latest/lib/python3.7/site-packages/pymf6'\n",
-    "pymf6_path = os.path.join(user_path, rtd_path)\n",
-    "old_lib_path = os.getenv('LD_LIBRARY_PATH', '')\n",
-    "if old_lib_path:\n",
-    "    new_lib_path = ':'.join([old_lib_path, pymf6_path])\n",
-    "else:\n",
-    "    new_lib_path = pymf6_path\n",
-    "%set_env LD_LIBRARY_PATH=$new_lib_path"
+    "%cd -q ../examples/ex02-tidal/"
    ]
   },
   {
@@ -55,50 +43,6 @@
     "The model `ex02-tidal` is one of the example models that come with MODFLOW6.\n",
     "\n",
     "Now, import the class `MF6` from the module `pymf6.threaded`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = %env LD_LIBRARY_PATH\n",
-    "%ls -al $p\n",
-    "print(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "def list_files(startpath):\n",
-    "    for root, dirs, files in os.walk(startpath):\n",
-    "        level = root.replace(startpath, '').count(os.sep)\n",
-    "        indent = ' ' * 4 * (level)\n",
-    "        print('{}{}/'.format(indent, os.path.basename(root)))\n",
-    "        subindent = ' ' * 4 * (level + 1)\n",
-    "        for f in files:\n",
-    "            print('{}{}'.format(subindent, f))\n",
-    "            \n",
-    "list_files(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "# Change to model directory\n",
-    "\n",
-    "%cd -q ../examples/ex02-tidal/"
    ]
   },
   {
