--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -126,10 +126,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>ini_path:</td><td>HOME_PATH\\pymf6.ini</td></tr><tr><td>dll_path:</td><td>HOME_PATH\\mf6.4.1\\bin\\libmf6.dll</td></tr><tr><td>xmipy_version:</td><td>1.2.0</td></tr><tr><td>pymf6_version:</td><td>1.0.1.dev3+g17bd1ff4.d20230108</td></tr><tr><td>modflow_version:</td><td>6.4.1</td></tr></tbody></table>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>ini_path:</td><td>HOME_PATH\\pymf6.ini</td></tr><tr><td>dll_path:</td><td>HOME_PATH\\mf6.4.1\\bin\\libmf6.dll</td></tr><tr><td>xmipy_version:</td><td>1.2.0</td></tr><tr><td>pymf6_version:</td><td>1.0.1</td></tr><tr><td>modflow_version:</td><td>6.4.1</td></tr></tbody></table>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x23524c33280>"
+       "<pymf6.mf6.MF6 at 0x1764161a020>"
       ]
      },
      "execution_count": 6,
@@ -161,7 +161,7 @@
      "text": [
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.0.1.dev3+g17bd1ff4.d20230108\n",
+      "pymf6 version: 1.0.1\n",
       "xmipy version: 1.2.0\n",
       "ini file path: HOME_PATH\\pymf6.ini\n",
       "dll file path: HOME_PATH\\mf6.4.1\\bin\\libmf6.dll\n",
