--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -134,10 +134,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.0.4.dev3+g73beafa6</td></tr><tr><td>xmipy version:</td><td>1.2.0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.4.1</td></tr></tbody></table><p>MODFLOW variable documentation is available</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>ini_path:</td><td>/Users/mike/pymf6.ini</td></tr><tr><td>dll_path:</td><td>/Users/mike/hydrocomputing/projects/2021/003_ModSimple_Phase2/Bearbeitung/MODFLOW6/mf6.4.1/bin/libmf6.dylib</td></tr><tr><td>xmipy_version:</td><td>1.2.0</td></tr><tr><td>pymf6_version:</td><td>1.0.3</td></tr><tr><td>modflow_version:</td><td>6.4.1</td></tr></tbody></table>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x1382a2c90>"
+       "<pymf6.mf6.MF6 at 0x132bfd810>"
       ]
      },
      "execution_count": 7,
@@ -167,15 +167,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.0.4.dev3+g73beafa6\n",
+      "pymf6 version: 1.0.3\n",
       "xmipy version: 1.2.0\n",
-      "ini file path: HOME/pymf6.ini\n",
-      "dll file path: path/to/dll/libmf6.dll\n",
-      "MODFLOW version: 6.4.1\n",
-      "MODFLOW variable documentation is available\n"
+      "ini file path: /Users/mike/pymf6.ini\n",
+      "dll file path: /Users/mike/hydrocomputing/projects/2021/003_ModSimple_Phase2/Bearbeitung/MODFLOW6/mf6.4.1/bin/libmf6.dylib\n",
+      "MODFLOW version: 6.4.1\n"
      ]
     }
    ],
@@ -467,17 +465,11 @@
     {
      "data": {
       "text/html": [
-       "<h3>Variable NPER</h3><table><tbody><tr><td>value: </td><td>4</td></tr><tr><td>docstring: </td><td>set equal to nper</td></tr><tr><td>docstring source: </td><td>src/Timing/ats.f90\n",
-       "                                 line 25</td></tr><tr><td>docstring: </td><td>number of stress period</td></tr><tr><td>docstring source: </td><td>src/Timing/tdis.f90\n",
-       "                                 line 22</td></tr></tbody></table>"
+       "<h3>Variable NPER</h3><table><tbody><tr><td>value: </td><td>4</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Variable NPER \n",
-       "value: 4\n",
-       "docstring: set equal to nper\n",
-       "docstring source: src/Timing/ats.f90 line 25\n",
-       "docstring: number of stress period\n",
-       "docstring source: src/Timing/tdis.f90 line 22"
+       "value: 4"
       ]
      },
      "execution_count": 16,
@@ -506,15 +498,12 @@
     {
      "data": {
       "text/html": [
-       "<h3>Variable PERLEN</h3><table><tbody><tr><td>value: </td><td>array([ 1., 10., 10., 10.])</td></tr><tr><td>shape: </td><td>(4,)</td></tr><tr><td>docstring: </td><td>length of each stress period</td></tr><tr><td>docstring source: </td><td>src/Timing/tdis.f90\n",
-       "                                 line 38</td></tr></tbody></table>"
+       "<h3>Variable PERLEN</h3><table><tbody><tr><td>value: </td><td>array([ 1., 10., 10., 10.])</td></tr><tr><td>shape: </td><td>(4,)</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Variable PERLEN \n",
        "value: array([ 1., 10., 10., 10.])\n",
-       "shape: (4,)\n",
-       "docstring: length of each stress period\n",
-       "docstring source: src/Timing/tdis.f90 line 38"
+       "shape: (4,)"
       ]
      },
      "execution_count": 17,
@@ -882,15 +871,12 @@
     {
      "data": {
       "text/html": [
-       "<h3>Variable PERLEN</h3><table><tbody><tr><td>value: </td><td>array([ 1., 10., 10., 10.])</td></tr><tr><td>shape: </td><td>(4,)</td></tr><tr><td>docstring: </td><td>length of each stress period</td></tr><tr><td>docstring source: </td><td>src/Timing/tdis.f90\n",
-       "                                 line 38</td></tr></tbody></table>"
+       "<h3>Variable PERLEN</h3><table><tbody><tr><td>value: </td><td>array([ 1., 10., 10., 10.])</td></tr><tr><td>shape: </td><td>(4,)</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Variable PERLEN \n",
        "value: array([ 1., 10., 10., 10.])\n",
-       "shape: (4,)\n",
-       "docstring: length of each stress period\n",
-       "docstring source: src/Timing/tdis.f90 line 38"
+       "shape: (4,)"
       ]
      },
      "execution_count": 28,
