--- a/doc/examples/transport/mf6_run.ipynb
+++ b/doc/examples/transport/mf6_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "03dfc3da-eb65-4a0e-a551-33f88cc2d362",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "96bfad4b-8b00-487a-b4ce-2d8909b2c8e0",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "323aef33-89bb-47a8-9757-fe73f8bef636",
    "metadata": {
     "tags": []
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "bb99a27d-8e56-422d-be6e-3de23502ceb1",
    "metadata": {
     "tags": []
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "1b4719d4-a7b6-42fb-9ac7-1b210574ae25",
    "metadata": {
     "tags": []
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "a25f23b0-13d3-4c0f-85af-4e0a757ead02",
    "metadata": {
     "tags": []
@@ -123,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6aeeb3f2-d2f6-4e1e-b549-23680a1f968c",
+   "execution_count": 36,
+   "id": "d54d7558-0728-4ecc-bdba-031b5552410c",
    "metadata": {
     "tags": []
    },
@@ -136,9 +136,35 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mshow_concentration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwel_coords\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwel_coords\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mC:\\TUBAF\\MODSIMPLE2\\pymf6\\doc\\examples\\transport\\make_model.py:423\u001b[0m, in \u001b[0;36mshow_concentration\u001b[1;34m(model_path, name, wel_coords)\u001b[0m\n\u001b[0;32m    421\u001b[0m sim \u001b[38;5;241m=\u001b[39m get_simulation(model_path, name)\n\u001b[0;32m    422\u001b[0m gwt \u001b[38;5;241m=\u001b[39m sim\u001b[38;5;241m.\u001b[39mget_model(name)\n\u001b[1;32m--> 423\u001b[0m conc \u001b[38;5;241m=\u001b[39m \u001b[43mgwt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moutput\u001b[49m\u001b[38;5;241m.\u001b[39mconcentration()\u001b[38;5;241m.\u001b[39mget_ts(wel_coords)\n\u001b[0;32m    424\u001b[0m _, ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots()\n\u001b[0;32m    425\u001b[0m ax\u001b[38;5;241m.\u001b[39mplot(conc[:, \u001b[38;5;241m0\u001b[39m], conc[:, \u001b[38;5;241m1\u001b[39m], label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConcentration\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mshow_well_head\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwel_coords\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwel_coords\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mC:\\TUBAF\\MODSIMPLE2\\pymf6\\doc\\examples\\transport\\make_model.py:411\u001b[0m, in \u001b[0;36mshow_well_head\u001b[1;34m(model_path, name, wel_coords)\u001b[0m\n\u001b[0;32m    409\u001b[0m sim \u001b[38;5;241m=\u001b[39m get_simulation(model_path, name)\n\u001b[0;32m    410\u001b[0m gwf \u001b[38;5;241m=\u001b[39m sim\u001b[38;5;241m.\u001b[39mget_model(name)\n\u001b[1;32m--> 411\u001b[0m heads \u001b[38;5;241m=\u001b[39m \u001b[43mgwf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moutput\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\u001b[38;5;241m.\u001b[39mget_ts(wel_coords)\n\u001b[0;32m    412\u001b[0m _, ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots()\n\u001b[0;32m    413\u001b[0m ax\u001b[38;5;241m.\u001b[39mplot(heads[:, \u001b[38;5;241m0\u001b[39m], heads[:, \u001b[38;5;241m1\u001b[39m], label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWell water level\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'output'"
+     ]
+    }
+   ],
+   "source": [
+    "show_well_head(model_path=model_path, name=name, wel_coords=wel_coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6aeeb3f2-d2f6-4e1e-b549-23680a1f968c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'models\\\\mf6.obs.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mshow_concentration\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwel_coords\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwel_coords\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mC:\\TUBAF\\MODSIMPLE2\\pymf6\\doc\\examples\\transport\\make_model.py:446\u001b[0m, in \u001b[0;36mshow_concentration\u001b[1;34m(model_path, name, wel_coords)\u001b[0m\n\u001b[0;32m    444\u001b[0m gwt \u001b[38;5;241m=\u001b[39m sim\u001b[38;5;241m.\u001b[39mget_model(name)\n\u001b[0;32m    445\u001b[0m fname \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(model_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.obs.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 446\u001b[0m mf6cobs \u001b[38;5;241m=\u001b[39m \u001b[43mflopy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMf6Obs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m    447\u001b[0m \u001b[38;5;66;03m#conc = gwt.output.concentration().get_ts(wel_coords)\u001b[39;00m\n\u001b[0;32m    448\u001b[0m _, ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots()\n",
+      "File \u001b[1;32mC:\\TUBAF\\mambaforge\\envs\\pymf6\\lib\\site-packages\\flopy\\utils\\observationfile.py:293\u001b[0m, in \u001b[0;36mMf6Obs.__init__\u001b[1;34m(self, filename, verbose, isBinary)\u001b[0m\n\u001b[0;32m    291\u001b[0m \u001b[38;5;66;03m# check if this is a binary file\u001b[39;00m\n\u001b[0;32m    292\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m isBinary \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 293\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m foo:\n\u001b[0;32m    294\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(foo, io\u001b[38;5;241m.\u001b[39mTextIOBase):\n\u001b[0;32m    295\u001b[0m             isBinary \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'models\\\\mf6.obs.csv'"
      ]
     }
    ],
