--- a/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
+++ b/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
@@ -75,11 +75,8 @@
        "\"\"\"\n",
        "\n",
        "import flopy\n",
-       "import numpy as np\n",
        "\n",
        "import pymf6\n",
-       "\n",
-       "\n",
        "\n",
        "MF6EXE = pymf6.__mf6_exe__\n",
        "```\n"
@@ -131,9 +128,9 @@
        "\n",
        "\n",
        "def make_input(\n",
-       "    model_data,\n",
-       "    exe_name=MF6EXE,\n",
-       "    verbosity_level=0):\n",
+       "        model_data,\n",
+       "        exe_name=MF6EXE,\n",
+       "        verbosity_level=0):\n",
        "    \"\"\"Create MODFLOW 6 input\"\"\"\n",
        "    sim = flopy.mf6.MFSimulation(\n",
        "        sim_name=model_data['name'],\n",
@@ -156,8 +153,8 @@
        "        modelname=model_data['name'],\n",
        "        save_flows=True)\n",
        "    kwargs = {name: model_data[name] for name in\n",
-       "        ['nrow', 'ncol', 'nlay', 'delr', 'delc','top','botm']\n",
-       "    }\n",
+       "              ['nrow', 'ncol', 'nlay', 'delr', 'delc', 'top', 'botm']\n",
+       "              }\n",
        "    flopy.mf6.ModflowGwfdis(gwf, **kwargs)\n",
        "    flopy.mf6.ModflowGwfic(gwf)\n",
        "    flopy.mf6.ModflowGwfnpf(\n",
@@ -199,7 +196,7 @@
        "        stress_period_data=model_data['chd']\n",
        "    )\n",
        "    budget_file = model_data['name'] + '.bud'\n",
-       "    head_file = model_data['name']  + '.hds'\n",
+       "    head_file = model_data['name'] + '.hds'\n",
        "    flopy.mf6.ModflowGwfoc(\n",
        "        gwf,\n",
        "        budget_filerecord=budget_file,\n",
@@ -234,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "77f77b50-11c3-4e75-a59a-b2349c6968ca",
    "metadata": {
     "tags": []
@@ -285,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "3f6bc856-09b3-48f4-aab4-6dd3c4e510fd",
    "metadata": {
     "tags": []
@@ -300,12 +297,13 @@
        "    'wel_qs': [-0.05, -0.5, -0.05],\n",
        "    #  flopy.mf6.ModflowTdis\n",
        "    'times': (\n",
-       "        10.0, # perlen (double) is the length of a stress period.\n",
-       "        120,  # nstp (integer) is the number of time steps in a stress period.\n",
-       "        1.0,  # tsmult (double) is the multiplier for the length of successive time steps.\n",
+       "        10.0,  # perlen (double) is the length of a stress period.\n",
+       "        120,   # nstp (integer) is the number of time steps in a stress period.\n",
+       "        1.0,   # tsmult (double) is the multiplier for the length of successive\n",
+       "               # time steps.\n",
        "    ),\n",
        "    'time_units': \"DAYS\",\n",
-       "    'repeat_times': 3,   #  nper = repeat_times + 1\n",
+       "    'repeat_times': 3,  # nper = repeat_times + 1\n",
        "    #  flopy.mf6.ModflowGwfdis\n",
        "    'nrow': 10,\n",
        "    'ncol': 10,\n",
@@ -321,7 +319,7 @@
        "    'sy': 0.2,\n",
        "    'ss': 0.000001,\n",
        "    # flopy.mf6.ModflowGwfchd(\n",
-       "    'chd':[\n",
+       "    'chd': [\n",
        "        [(0, 0, 0), 1.],\n",
        "        [(0, 9, 9), 1.]\n",
        "    ],\n",
@@ -354,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "8c3b7a9d-1f17-4f0a-bd8c-a0b01478f01c",
    "metadata": {
     "tags": []
@@ -403,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "f05f238d-97c2-4115-a183-8ca52f194b5d",
    "metadata": {},
    "outputs": [],
@@ -429,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "09ad303d-cec3-4230-96bb-c5d502e06c92",
    "metadata": {},
    "outputs": [],
@@ -449,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "eeff0f50-8067-4be0-be44-437e1ef0c173",
    "metadata": {
     "tags": [
@@ -496,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "fc2741eb-7925-4b81-8f4c-28652e126d7c",
    "metadata": {
     "tags": [
@@ -541,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e6e6aa07-019a-4f53-a8eb-e4f861eef6cb",
    "metadata": {},
    "outputs": [],
@@ -572,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "4a4c13b2-3e7f-4396-8a43-8b5eb663424d",
    "metadata": {
     "tags": [
@@ -592,7 +590,7 @@
        "import flopy\n",
        "from flopy.utils.postprocessing import get_specific_discharge\n",
        "\n",
-       "from make_model import get_simulation\n",
+       "from tools.make_model import get_simulation\n",
        "\n",
        "\n",
        "def show_heads(model_path, name, title='Head-Controlled Well'):\n",
@@ -632,7 +630,7 @@
        "        y_end=1.05,\n",
        "        tolerance=0.01,\n",
        "        head_limit=0.5,\n",
-       "        x = (0, 32)):\n",
+       "        x=(0, 32)):\n",
        "    \"\"\"Plot head at well over time.\"\"\"\n",
        "    sim = get_simulation(model_data['model_path'], model_data['name'])\n",
        "    gwf = sim.get_model(model_data['name'])\n",
@@ -645,7 +643,7 @@
        "    y_end = y_end\n",
        "    y_stress = (y_start, y_end)\n",
        "    x_stress_1 = (1, 1)\n",
-       "    times =  model_data['times']\n",
+       "    times = model_data['times']\n",
        "    times_diff = times[0]\n",
        "    x_stresses = []\n",
        "    for count in range(1, len(times)):\n",
@@ -656,7 +654,8 @@
        "    ax.set_ylim(y_start, y_end)\n",
        "    y1 = [head_limit - tolerance, head_limit - tolerance]\n",
        "    y2 = [head_limit + tolerance, head_limit + tolerance]\n",
-       "    ax.plot(x, y1, color='red', linestyle=':', label='Target water level range')\n",
+       "    ax.plot(x, y1, color='red', linestyle=':',\n",
+       "            label='Target water level range')\n",
        "    ax.plot(x, y2, color='red', linestyle=':')\n",
        "    ax.plot(\n",
        "         x_stress_1, y_stress,\n",
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "e4117cb5-06be-4239-9428-f6d4adfb07fc",
    "metadata": {},
    "outputs": [
@@ -730,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "668fe6e6-fcd5-4e20-ab18-4de21c20dad9",
    "metadata": {
     "tags": [
@@ -748,7 +747,7 @@
        "        y_end=1.05,\n",
        "        tolerance=0.01,\n",
        "        head_limit=0.5,\n",
-       "        x = (0, 32)):\n",
+       "        x=(0, 32)):\n",
        "    \"\"\"Plot head at well over time.\"\"\"\n",
        "    sim = get_simulation(model_data['model_path'], model_data['name'])\n",
        "    gwf = sim.get_model(model_data['name'])\n",
@@ -761,7 +760,7 @@
        "    y_end = y_end\n",
        "    y_stress = (y_start, y_end)\n",
        "    x_stress_1 = (1, 1)\n",
-       "    times =  model_data['times']\n",
+       "    times = model_data['times']\n",
        "    times_diff = times[0]\n",
        "    x_stresses = []\n",
        "    for count in range(1, len(times)):\n",
@@ -772,7 +771,8 @@
        "    ax.set_ylim(y_start, y_end)\n",
        "    y1 = [head_limit - tolerance, head_limit - tolerance]\n",
        "    y2 = [head_limit + tolerance, head_limit + tolerance]\n",
-       "    ax.plot(x, y1, color='red', linestyle=':', label='Target water level range')\n",
+       "    ax.plot(x, y1, color='red', linestyle=':',\n",
+       "            label='Target water level range')\n",
        "    ax.plot(x, y2, color='red', linestyle=':')\n",
        "    ax.plot(\n",
        "         x_stress_1, y_stress,\n",
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "7b3b60f6-10b0-4e10-b1fc-dd8c57d6873d",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "2fdbe4ef-30c3-480f-b0ad-afccd0f1ee08",
    "metadata": {
     "tags": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "6df65903-126c-47e8-80cc-22b191a09ba6",
    "metadata": {},
    "outputs": [],
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "96c2ccda-369e-4e07-b944-e02bdddb536e",
    "metadata": {},
    "outputs": [],
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "6128591d-110f-44bd-b8c5-110dd1e7899b",
    "metadata": {
     "tags": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "c4c4fde4-169c-4cb9-9370-041ff68656bb",
    "metadata": {
     "tags": []
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "99658a58-9276-478d-a5f5-ae2abed7b6ee",
    "metadata": {
     "tags": []
@@ -1044,7 +1044,7 @@
        "CompletedProcess(args=['/Users/mike/miniconda3/envs/modflowapi/bin/python', 'pymf6_head_controlled_well.py'], returncode=0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "e44a531e-1d7b-430e-a9b2-3bd96aae50b9",
    "metadata": {
     "tags": []
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "58099943-1a1b-4d2f-b0d9-3433316ce621",
    "metadata": {
     "tags": []
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "d28da824-d5c6-4bf6-b5dc-33708a609b89",
    "metadata": {
     "tags": []
@@ -1196,7 +1196,7 @@
        "CompletedProcess(args=['/Users/mike/miniconda3/envs/modflowapi/bin/python', 'pymf6_api_head_controlled_well.py'], returncode=0)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "6b2af7e1-7cb9-4a29-aad2-211099463060",
    "metadata": {
     "tags": []
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "edf58555-1952-438b-88de-21a678aa01c6",
    "metadata": {
     "tags": []
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "fc540ad4-9f3c-47af-b3cf-8a2c92bf3184",
    "metadata": {
     "tags": []
@@ -1333,7 +1333,7 @@
        "CompletedProcess(args=['python', 'pymf6_direct_head_controlled_well.py'], returncode=0)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "e9d903e2-397c-477c-8b6a-5f8c0ab613d1",
    "metadata": {
     "tags": []
