--- a/doc/examples/extraction_injection/Extraction_Injection.ipynb
+++ b/doc/examples/extraction_injection/Extraction_Injection.ipynb
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "%include pymf6_sys_injection_extraction.py"
+    "%include extraction_injection.py"
    ]
   },
   {
@@ -401,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['/Users/mike/miniconda3/envs/modflowapi/bin/python', 'pymf6_sys_injection_extraction.py'], returncode=0)"
+       "CompletedProcess(args=['/Users/mike/miniconda3/envs/modflowapi/bin/python', 'extraction_injection.py'], returncode=0)"
       ]
      },
      "execution_count": 12,
@@ -410,7 +410,7 @@
     }
    ],
    "source": [
-    "run([sys.executable, 'pymf6_sys_injection_extraction.py'], check=True)"
+    "run([sys.executable, 'extraction_injection.py'], check=True)"
    ]
   },
   {
@@ -579,7 +579,7 @@
     }
    ],
    "source": [
-    "%include injection_extraction_smooth.py"
+    "%include extraction_injection_smooth.py"
    ]
   },
   {
@@ -610,7 +610,7 @@
     }
    ],
    "source": [
-    "run([sys.executable, 'injection_extraction_smooth.py'], check=True)\n",
+    "run([sys.executable, 'extraction_injection_smooth.py'], check=True)\n",
     "show_well_head(\n",
     "    title='Controlled Injection Well',\n",
     "    wel_coords=wel_coordsin, \n",
