--- a/doc/examples/extraction_injection/Extraction_Injection.ipynb
+++ b/doc/examples/extraction_injection/Extraction_Injection.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Example: Extraction-Injection System\n",
     "\n",
-    "This example demonstrates how PyMF6 can be used to control the rate of an extraction well and an \n",
+    "This example demonstrates how `pymf6` can be used to control the rate of an extraction well and an \n",
     "injection in lockstep.\n",
     "The injection rate is the same as the extraction rate,\n",
     "i.e. `extraction_rate == -injection_rate`.\n",
@@ -374,7 +374,7 @@
    "id": "c1167172-f8d8-4e8b-8f6b-09bd6e9ec03c",
    "metadata": {},
    "source": [
-    "We run our model in under the control of PyMF6:"
+    "We run our model in under the control of `pymf6`:"
    ]
   },
   {
