Re-run notebooks

--- a/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
+++ b/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
@@ -1133,7 +1133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<flopy.mf6.utils.output_util.MF6Output object at 0x1462b5410>\n"
+      "<flopy.mf6.utils.output_util.MF6Output object at 0x15708ce90>\n"
      ]
     },
     {
@@ -1210,7 +1210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<flopy.mf6.utils.output_util.MF6Output object at 0x1417716d0>\n"
+      "<flopy.mf6.utils.output_util.MF6Output object at 0x1573f63d0>\n"
      ]
     },
     {
@@ -1452,7 +1452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<flopy.mf6.utils.output_util.MF6Output object at 0x14624e690>\n"
+      "<flopy.mf6.utils.output_util.MF6Output object at 0x157cabfd0>\n"
      ]
     },
     {
@@ -1605,7 +1605,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<flopy.mf6.utils.output_util.MF6Output object at 0x1417ea150>\n"
+      "<flopy.mf6.utils.output_util.MF6Output object at 0x15744e3d0>\n"
      ]
     },
     {
@@ -1750,7 +1750,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<flopy.mf6.utils.output_util.MF6Output object at 0x141767050>\n"
+      "<flopy.mf6.utils.output_util.MF6Output object at 0x1571641d0>\n"
      ]
     },
     {
